# RT_Flow

./: .gitignore  .gitmodules  Cargo.toml
contracts/: block-schema.json  compare-result.json  merge-result.json  workflow-events.json
crates/rt-compare/: Cargo.toml
crates/rt-compare/src/: align.rs  diff.rs  lib.rs  result.rs  tokenize.rs  worker.rs
crates/rt-core/: Cargo.toml
crates/rt-core/src/: anchor.rs  block.rs  db.rs  error.rs  hash.rs  lib.rs  schema.rs
crates/rt-ffi/: Cargo.toml
crates/rt-ffi/src/: ffi.rs  lib.rs  marshal.rs  result.rs
crates/rt-merge/: Cargo.toml
crates/rt-merge/src/: conflict.rs  layer.rs  lib.rs  merge.rs  resolution.rs
crates/rt-workflow/: Cargo.toml
crates/rt-workflow/src/: commands.rs  event.rs  lib.rs  projector.rs  state.rs  validator.rs
dotnet/: RT.Document.sln
dotnet/src/RT.Document/: DocumentProcessor.cs  DocxExporter.cs  DocxParser.cs  NumberingResolver.cs  RT.Document.csproj  StyleResolver.cs  Tokenizer.cs
dotnet/src/RT.Document/Models/: Block.cs
dotnet/src/RT.Editor/: EditorService.cs  RT.Editor.csproj
dotnet/src/RT.Interop/: RT.Interop.csproj  RustInterop.cs
dotnet/src/RT.Transform/: RT.Transform.csproj  TransformPipeline.cs
dotnet/tests/RT.Document.Tests/: DocumentProcessorTests.cs  RT.Document.Tests.csproj
dotnet/tests/RT.Transform.Tests/: RT.Transform.Tests.csproj  TransformPipelineTests.cs
electron/: package-lock.json  package.json  tsconfig.json  webpack.main.config.js  webpack.preload.config.js  webpack.renderer.config.js
electron/src/main/: docx-reader.ts  index.ts  preload.ts
electron/src/renderer/: App.tsx  index.html  index.tsx
electron/src/renderer/context/: AppContext.tsx
electron/src/renderer/editor/: BlockSync.ts  Editor.tsx
electron/src/renderer/services/: DocumentService.ts  RustBridge.ts
electron/src/renderer/styles/: global.css
electron/src/renderer/workflow/: WorkflowPanel.tsx  WorkflowTimeline.tsx
electron/src/renderer/workspace/: BlockRenderer.tsx  ConflictPanel.tsx  DeltaOverlay.tsx  Pane.tsx  ThreePaneLayout.tsx
electron/src/shared/types/: block.ts  results.ts  workflow.ts
