[workspace]
members = [
    "crates/rt-core",
    "crates/rt-compare",
    "crates/rt-merge",
    "crates/rt-workflow",
    "crates/rt-ffi",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
sha2 = "0.10"
rusqlite = { version = "0.31", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"
rayon = "1.10"
similar = "2"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
