[package]
name = "rt-ffi"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
rt-core = { path = "../rt-core" }
rt-compare = { path = "../rt-compare" }
rt-merge = { path = "../rt-merge" }
rt-workflow = { path = "../rt-workflow" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
rusqlite = { workspace = true }
chrono = { workspace = true }
