[package]
name = "rt-workflow"
version.workspace = true
edition.workspace = true

[dependencies]
rt-core = { path = "../rt-core" }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
rusqlite = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = "3"
